# J3301

./: LICENSE  README.md  auto_push_j2.bat  auto_push_j2.ps1  desktop.ini  main.py  orchestrator.py  pyproject.toml  requirements.txt  test.txt  test_2.txt  test_jupiter.py  test_script.py  webserver.py
noVNC/: vnc.html
server/: llm.py  main.py  remote_api.py  voice.py
utils/: audio.py
