[project]
name = "j2-server"
version = "0.1.0"
description = "Jupiter API server (FastAPI)"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "pyttsx3 (>=2.98,<3.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "customtkinter (>=5.2.2,<6.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "openai (>=1.76.0,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false